# km10

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  NOTES.md  README.md  apr.hpp  bytepointer.hpp  debugger.hpp  device.hpp  disasm.c  disasm.h  dte20.hpp  kl10.h  km10-emitters.js  km10-test.cpp  km10.c  km10.cpp  km10.hpp  kmstate.hpp  loada10.c  loada10.h  logger.hpp  logging.hpp  memory.hpp  pag.hpp  pi.hpp  test-kl10.c  test128.c  test128.cpp  w36.hpp  word.hpp
compiler/: README.md  compile10  compile10.js  km10-by-hand.c  package-lock.json  package.json  parser.pegjs
doc/: README-if-lost-operator-password.md  diag-list.md  grab-a10s.sh
images/klad/: ----README.md  d20mon.a10  d20mon.sav  dakaa.sav  dakab.sav  dakac.sav  dakad.sav  dakae.sav  dakaf.sav  dakag.sav  dakah.sav  dakai.sav  dakaj.sav  dakak.sav  dakal.sav  dakam.sav  dakba.sav  dakbb.sav  dakbc.sav  dakbd.sav  dakca.sav  dakcb.sav  dakda.sav  dakdb.sav  dbkaa.sav  dbkab.sav  dbkad.sav  dbkae.sav  dbkaf.sav  dbkag.sav  dbkah.sav  dbkai.sav  dbkaj.sav  dbkak.sav  dbkal.sav  dbkam.sav  dbkba.sav  dbkbb.sav  dbkbc.sav  dbkbd.sav  (+88 more)
images/klad-compiled/: <KLAD>DIAMON.REL.1  <KLAD>DIAMON.SAV.1  DFKCB.CCL.1  DFKCB.CTL.2  DFKCB.HST.1  DIAMON.CCL.1  DIAMON.CTL.1  DIAMON.HST.1  DIAMON.INP.1  DIAMON.LOG.1  DIAMON.MAC.2  DIAMON.SEQ.1  DIAMON.TXT.1  dfcia.a10  dfdra.a10  dfdte.a10  dfdxc.a10  dfdxd.a10  dfdxe.a10  dfdxg.a10  dfk-all.dir  dfkaa.ccl  dfkaa.ctl  dfkaa.hst  dfkaa.inp  dfkaa.lst  dfkaa.rel  dfkaa.sav  dfkaa.seq  dfkaa.txt  dfkaa1.mac  dfkaa2.mac  dfkaa3.mac  dfkaa4.mac  dfkaa5.mac  dfkaa6.mac  dfkaa7.mac  dfkaa8.mac  dfkaat.mac  dfkac.converted.inp  (+113 more)
images/klad20-a10s/: d20mon.a10  ddana.a10  ddanb.a10  ddlaa.a10  ddlta.a10  ddmmc.a10  ddmmd.a10  ddmme.a10  ddmmf.a10  ddqcb.a10  ddrpi.a10  ddtug.a10  ddtuh.a10  ddvta.a10  ddvtc.a10  demmg.a10  dfcia.a10  dfdra.a10  dfdte.a10  dfdxc.a10  dfdxd.a10  dfdxe.a10  dfdxg.a10  dfkaa.a10  dfkab.a10  dfkac.a10  dfkad.a10  dfkba.a10  dfkbb.a10  dfkca.a10  dfkcb.a10  dfkcc.a10  dfkda.a10  dfkea.a10  dfkeb.a10  dfkec.a10  dfked.a10  dfkfb.a10  dfkfd.a10  dfmmh.a10  (+22 more)
images/klddt/: klddt-0.12.a10  klddt.ccl  klddt.ctl  klddt.hlp  klddt.hst  klddt.inp  klddt.mac  klddt.seq  klddt.txt
include/: apr.hpp  cca.hpp  debugger.hpp  device.hpp  dte20.hpp  km10.hpp  kmstate.hpp  logger.hpp  pag.hpp  pi.hpp  word.hpp
jsc/: compile10.js  js2c  km10.jsc
lib/: CMakeLists.txt
src/: CMakeLists.txt  apr.cpp  apr.hpp  bytepointer.cpp  bytepointer.hpp  cca.cpp  cca.hpp  debugger.cpp  debugger.hpp  device.cpp  device.hpp  dte20.cpp  dte20.hpp  i-aoxsox.cpp  i-bitrot.cpp  i-byte.cpp  i-cmpand.cpp  i-dword.cpp  i-half.cpp  i-incjs.cpp  i-intbin.cpp  i-io.cpp  i-jump.cpp  i-move.cpp  i-move.hpp  i-muldiv.cpp  i-set.cpp  i-test.cpp  i-tstset.cpp  i-uuos.cpp  instruction-result.hpp  iresult.hpp  km10.cpp  km10.hpp  kmstate.cpp  kmstate.hpp  logger.cpp  logger.hpp  move.cpp  mtr.cpp  (+10 more)
tests/: CMakeLists.txt  km10-test.cpp  km10-test.hpp  test-fixed.cpp  test-move.cpp  test-pc.cpp  test128.cpp
tools/: increment-octal-values.el  make-methods-intbin.js  make-methods-test.js  make-methods.js
